--- a/index.html
+++ b/index.html
@@ -21,15 +21,30 @@
     <div class="avatar-container"><img src="images\image-avatar.png" alt="avatar-img"></div>
     <div class="cart-container"><img src="images\icon-cart.svg" alt="cart"></div>
   </header>
-  <nav></nav>
+
   <main>
     <div class="mainImgContainer">
       <div class="img"><img src="images\image-product-1.jpg" alt="mainImg" srcset=""></div>
-      <div class="previous"><img src="images\icon-previous.svg" alt="previous" srcset=""></div>
-      <div class="next"><img src="images\icon-next.svg" alt="next" srcset=""></div>
+      <div class="previous"><svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path id="svg1" d="M11 1 3 9l8 8" stroke="currentcolor" stroke-width="3" fill="none" fill-rule="evenodd"/></svg></div>
+      <div class="next"><svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path id="svg2" d="m2 1 8 8-8 8" stroke="currentcolor" stroke-width="3" fill="none" fill-rule="currentcolor"/></svg></div>
     </div>
+
+    <article>
+      <div class="articleText">
+        <h2>SNEAKER COMPANY</h2>
+        <h1>Fall Limited Edition <br>Sneakers</h1>
+        <p> These low-profile sneakers are your perfect casual wear companion. Featuring a 
+        durable rubber outer sole, they’ll withstand everything the weather can offer.
+      </p>
+      </div>
+      <div inline; class="articlePice">
+        <div class="newPrice">$125.00</div>
+        <div class="discount">50%</div>
+        <div class="oldPrice">$250.00</div>
+      </div>
+    </article>
   </main>
-<footer>
+<footer><svg
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
