--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; margin-top: 5vh; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -21,6 +21,20 @@
     <div class="avatar-container"><img src="images\image-avatar.png" alt="avatar-img"></div>
     <div class="cart-container"><img src="images\icon-cart.svg" alt="cart"></div>
   </header>
+
+  <div class="toggle-nav" style="display: ; " id="navbar">
+    <div class="blurDiv"></div>
+    <div class="navDiv">
+     <div class="closeBtn" id="closeBtn" style="cursor: pointer;"><img src="images\icon-close.svg" alt="close"></div>
+      <ul class="toggleMenu">
+        <li><a href="/">Home</a></li>
+        <li><a href="/">New</a></li>
+        <li><a href="/">Popular</a></li>
+        <li><a href="/">Trending</a></li>
+        <li><a href="/">Categories</a></li>
+      </ul>
+    </div>
+  </div>
 
   <main>
     <div class="mainImgContainer">
@@ -42,13 +56,22 @@
         <div class="discount">50%</div>
         <div class="oldPrice">$250.00</div>
       </div>
+      <section>
+        <div class="counterContainer">
+          <div class="minus"><svg width="12" height="4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path d="M11.357 3.332A.641.641 0 0 0 12 2.69V.643A.641.641 0 0 0 11.357 0H.643A.641.641 0 0 0 0 .643v2.046c0 .357.287.643.643.643h10.714Z" id="a"/></defs><use id="colorMinus" fill="currentcolor" fill-rule="nonzero" xlink:href="#a"/></svg></div>
+          <div class="counter">0</div>
+          <div class="plus"><svg width="12" height="12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path d="M12 7.023V4.977a.641.641 0 0 0-.643-.643h-3.69V.643A.641.641 0 0 0 7.022 0H4.977a.641.641 0 0 0-.643.643v3.69H.643A.641.641 0 0 0 0 4.978v2.046c0 .356.287.643.643.643h3.69v3.691c0 .356.288.643.644.643h2.046a.641.641 0 0 0 .643-.643v-3.69h3.691A.641.641 0 0 0 12 7.022Z" id="b"/></defs><use id="colorPlus" fill="currentcolor" fill-rule="nonzero" xlink:href="#b"/></svg></div>
+        </div>
+        <button class="cartBtn"><spam id="lol"><svg width="22" height="20" xmlns="http://www.w3.org/2000/svg"><path id="cart" d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="white" fill-rule="nonzero"/></svg></spam> Add to cart</button>
+      </section>
     </article>
   </main>
-<footer><svg
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </footer>
+<script src="app.js"></script>
 </body>
 </html>
